--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "4.1.3",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-flags-select": "^1.1.9",
     "react-scripts": "1.1.4",
     "react-select": "^2.0.0"
   },
