--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react-dom": "^16.4.2",
     "react-flags-select": "^1.1.9",
     "react-scripts": "1.1.4",
-    "react-select": "^2.0.0"
+    "react-select": "^2.0.0",
+    "validatorjs": "^3.14.2"
   },
   "scripts": {
     "start": "react-scripts start",
