--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bootstrap": "4.1.3",
     "react": "^16.4.2",
+    "react-date-picker": "^6.11.3",
     "react-dom": "^16.4.2",
     "react-flags-select": "^1.1.9",
     "react-scripts": "1.1.4",
