--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-date-picker": "^6.11.3",
     "react-dom": "^16.4.2",
     "react-flags-select": "^1.1.9",
+    "react-phone-number-input": "^2.2.1",
     "react-scripts": "1.1.4",
     "react-select": "^2.0.0",
     "validatorjs": "^3.14.2"
