--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "dependencies": {
     "bootstrap": "4.1.3",
     "lodash": "^4.17.10",
+    "moment": "^2.22.2",
     "react": "^16.4.2",
-    "react-date-picker": "^6.11.3",
+    "react-datetime": "^2.15.0",
     "react-dom": "^16.4.2",
     "react-flags-select": "^1.1.9",
     "react-phone-number-input": "^2.2.1",
